--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ margin-right: 1vw;}
 
 
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
     <script>
         var triggerPhraseMap = {
             'note-mel': 'Měl bych',
