--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <link
         href="http://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap"
         rel="stylesheet">
-    <style>
+     <link href="style.css" rel="stylesheet">
     
-    </style>
 </head>
 
 <body>
