--- a/index.html
+++ b/index.html
@@ -61,12 +61,8 @@
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
-    <script>
-      
+    <script src="scripts.js"></script>
 
-
-
-    </script>
 </body>
 
 </html>
