--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         </div>
                     </div>
                 </div>
-                <button onclick="addNewTrigger()" class="add-trigger">ADD TRIGGER</button>
+                <button onclick="addNewTrigger()" class="add-trigger">+ TRIGGER</button>
             </div>
             <div class="addnote">
                 <input type="text" id="manualNoteInput" placeholder="Type your note here...">
-                <button class="add" onclick="addManualNote()">ADD NOTE</button>
+                <button class="add" onclick="addManualNote()">+ NOTE</button>
             </div>
             <div class="sheet">
                 <audio id="dingSound" src="ding.mp3" preload="auto"></audio>
