--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="sheet">
                 <audio id="dingSound" src="ding.mp3" preload="auto"></audio>
                 <p id="noteArea" class="sheet-text"></p>
-                <div id="listeningStatus"><span id="status">Not Listening</span></div>
+                <div id="listeningStatus"><span id="status">Ready</span></div>
                 <button onclick="downloadNotes()" class="download">DOWNLOAD</button>
             </div>
         </div>
