--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
                             <div class="note-melibysme">Měli bysme</div>
                             <div class="note-melibychom">Měli bychom</div>
 
+                
                         </div>
+                        <button onclick="addNewTrigger()" class="add-trigger">ADD</button>
                     </div>
                 </div>
-                <button onclick="addNewTrigger()" class="add-trigger">+ TRIGGER</button>
             </div>
             <div class="addnote">
                 <input type="text" id="manualNoteInput" placeholder="Type your note here...">
-                <button class="add" onclick="addManualNote()">+ NOTE</button>
+                <button class="add" onclick="addManualNote()">ADD</button>
             </div>
             <div class="sheet">
                 <audio id="dingSound" src="ding.mp3" preload="auto"></audio>
