--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="paper">
         <div class="shm">
-            <div class="df">
+            <div class="df" id="listeningStatus">
                                     <span id="currentDate"></span>
 
                 <div class="controls" style="top: -190px;">
@@ -39,7 +39,7 @@
                     
                 </div>
                 
-                <div id="listeningStatus"><span id="status">Ready</span></div>
+                <div ><span id="status">Ready</span></div>
 
 
             </div>
