--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 
                         </div>
-                        <button onclick="addNewTrigger()" class="add-trigger">ADD</button>
+                        <button onclick="addNewTrigger()" class="add-trigger">Add</button>
                     </div>
                     
                 </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="addnote">
                 <input type="text" id="manualNoteInput" placeholder="Type your note here...">
-                <button class="add" onclick="addManualNote()">ADD</button>
+                <button class="add" onclick="addManualNote()">Add</button>
             </div>
             <div class="sheet">
                 <audio id="dingSound" src="ding.mp3" preload="auto"></audio>
