--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 
                         </div>
-                        <button onclick="addNewTrigger()" class="add-trigger">Add</button>
+                        <button onclick="addNewTrigger()" class="add-trigger">+</button>
                     </div>
                     
                 </div>
