--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     
                 </div>
                 
-                <div ><span id="status">Ready</span></div>
+                <div ><span id="status" color="blue">Ready</span></div>
 
 
             </div>
