--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             </div>
             <div class="addnote">
-                <input type="text" id="manualNoteInput" placeholder="Type your note here...">
+                <input type="text" id="manualNoteInput" placeholder="Type your note here..." value=""></input>
                 <button class="add" onclick="addManualNote()">Add</button>
             </div>
             <div class="sheet">
