--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                     <span id="currentDate"></span>
 
                 <div class="controls" style="top: -190px;">
-<div>Commands</div>
+<div class="commands">Commands</div>
                     <div id="voiceTriggers">
                         <div class="inline-flex">
 
